@@ -1,9 +1,12 @@
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
 DIST qt-mac-opensource-src-4.5.0-rc1.tar.bz2 108654601 RMD160 36c7490f9e4d55d86d875d91357c57ecd4acd8f3 SHA1 93e593b68e974ee30c7a044a7373ba2d3878def2 SHA256 e96eff94f40752da6c0eb64f91c58346a2d87a2b2f7a09155d509cb8195881bf
+DIST qt-mac-opensource-src-4.5.0.tar.bz2 111184478 RMD160 1df7c97276d89b814b867abc3d53a9423f720181 SHA1 a9704ccc501e66360015f33d97e939d5e2ab7c81 SHA256 baccbfa5c55da9a1f97192ec643b63f7e8afc2d51eab5f954617efd321fab947
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f55863543fcd4dd3a8105864ec1 SHA1 1dffebc52543ee8dd486ec69fc51d02e216323bd SHA256 94aa6268662a24cec1a20e2fb88fcac418101719c0e1ab2729289fd8b7d475d7
+DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 EBUILD qt-opengl-4.4.2.ebuild 1077 RMD160 1649551514e67d26cb776bbc4efe8c11de5f854c SHA1 818bf34eb88878bc409e336e8f50519fd4c93c0e SHA256 e3fba952573175752e7457d2d363ba901a39f86b58c2f81988e761d07bd056db
+EBUILD qt-opengl-4.5.0.ebuild 966 RMD160 a1664b2d29dc4751349e7f41abfd7444483305ce SHA1 0c8863cc2ebee80f300f09f8cff233b03770e52d SHA256 40b2ad583693385b8fa78d3152532c0ba2d0ad41af20c76c6732f0a3f2240686
 EBUILD qt-opengl-4.5.0_rc1.ebuild 999 RMD160 8a1cfe9959773c807003050c933bc94147dca78c SHA1 8be05b3c3ea85f2b8ed277e07379675e2fcbea61 SHA256 9897534206603603dda668a26fe14e90cf989e2c501af76888107373e18d92ff
-MISC ChangeLog 3090 RMD160 6f160d7c892f952629c2000227b0e38f16b7aaa7 SHA1 a7c31027581cf50b913e932fbefea6607a6141af SHA256 8cc8d406a7b3c378f33622249622fca7ff8878debaecd80574da5226b022919d
+MISC ChangeLog 3214 RMD160 f5f099028c71f71fa3f4a7980c8eb512eea81f57 SHA1 9a67afd2c9a9b280fc6b9566f9a0f14fb9836c3b SHA256 a5c8c7bb3c387cdc3b61dafb91378ee5e3cf91843b3d7ef9bb6775270957e1a6
 MISC metadata.xml 241 RMD160 a4b01c7b25f020916e4b7ec0b1d494f8e2f54078 SHA1 05d7b5faaf60edc3149fd71ba64cbc577e7692a4 SHA256 e6d7a58349ce295f0397169bd553c878472d313e2b69c6a08e72f54b4a4333b0
