@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-opengl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-opengl/ChangeLog,v 1.23 2009/02/18 19:58:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-opengl/ChangeLog,v 1.24 2009/03/04 20:48:50 yngwin Exp $
+
+*qt-opengl-4.5.0 (04 Mar 2009)
+
+  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-opengl-4.5.0.ebuild:
+  Version bump
 
   18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-opengl-4.4.2.ebuild:
   Stable for HPPA (bug #248083).
